--- a/src/client/merge.html
+++ b/src/client/merge.html
@@ -53,8 +53,16 @@
             <label class={{item.class}}>{{item.name}}</label>
         </div>
     </div>
-    <div class="col-xs-4">MY VIEW</div>
-    <div class="col-xs-4">THEIR VIEW</div>
+    <div class="col-xs-4">
+        <h2><span class="label label-default">MINE</span></h2>
+        <h3><span class="label label-primary">{{items[selectedItem].mine.path}}</span></h3>
+        <h3><span class="label label-primary">{{items[selectedItem].mine.value}}</span></h3>
+    </div>
+    <div class="col-xs-4">
+        <h2><span class="label label-default">THEIRS</span></h2>
+        <h3><span class="label label-primary">{{items[selectedItem].theirs.path}}</span></h3>
+        <h3><span class="label label-primary">{{items[selectedItem].theirs.value}}</span></h3>
+    </div>
     <div class="col-xs-2">
         <div class="row">
             <label class="col-xs-offset-1 btn btn-warning disabled">{{items[selectedItem].theirs.guid}}</label>
