--- a/src/client/login.html
+++ b/src/client/login.html
@@ -69,7 +69,7 @@
 
     <body>
         <div class="container">
-            <form class="form-signin" action="/login" method="post">
+            <form class="form-signin">
                 <h2 class="form-signin-heading">WebGME sign in</h2>
                 <div class="row">
                     <div class="col-md-6">
@@ -88,7 +88,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+                        <button class="btn btn-large btn-primary" type="button" onclick="location.href=location.origin+'/login/gme'+window.location.search+'&username='+document.getElementsByTagName('input')[0].value+'&password='+document.getElementsByTagName('input')[1].value">Sign in</button>
                     </div>
                     <div class="col-md-6">
                         <a class="btn btn-danger pull-right gPlusButton" type="button" onclick="window.location.href='/login/google'">
