$148 remove setTimeouts; warning->warn; add test
Calls on-gme-init when all classes are ready and downloaded to the
client.

--- a/test/test_dist_should_fail.html
+++ b/test/test_dist_should_fail.html
@@ -16,9 +16,10 @@
 
 </head>
 
-<body on-gme-init="myInit">
+<body>
 
 Test page.
+on-gme-init is not defined on the body tag.
 See console for messages.
 
 </body>
