--- a/test/test_dist_should_fail.html
+++ b/test/test_dist_should_fail.html
@@ -1,9 +1,8 @@
 <html>
 <head>
     <script type="text/javascript">
-        var myInit = function (result) {
+        var myInit = function () {
             console.log('myInit function was called');
-            console.log(result);
 
             // you can use GME.classes.Client from this point
             console.log(GME);
