#178 build new node-worker and update index.html

--- a/src/middleware/executor/worker/index.html
+++ b/src/middleware/executor/worker/index.html
@@ -83,7 +83,7 @@
                             "blob": "middleware/blob",
 
                             // "jszip": 'lib/jszip/jszip',
-                            "executor": 'extlib/' + getconfig.paths.executor
+                            "executor": 'middleware/executor'
                         },
                         nodeRequire: nodeRequire
                     });
